Fix localization key and translation for area list
Updated the localization key from 'all_area' to 'all_areas' in AreaListView and corrected the German translation from 'Ale Flächen' to 'Alle Flächen' in Localizable.xcstrings.

--- a/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
+++ b/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
@@ -12,7 +12,7 @@
       }
     },
     "-" : {
-
+      "shouldTranslate" : false
     },
     "%@" : {
       "shouldTranslate" : false
@@ -52,16 +52,12 @@
         }
       }
     },
-    "all_area" : {
-
-    },
     "all_areas" : {
-      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ale Flächen"
+            "value" : "Alle Flächen"
           }
         }
       }
